--- a/css/blueleafstyle.css
+++ b/css/blueleafstyle.css
@@ -36,22 +36,15 @@ html {
     color: var(--white);
 }
 
-.desscription {
-    width: 65%;
-    display: flex;
-    margin-left: 17%;
-    text-align: center;
-}
-
 h2 {
     font-size: 2em;
     margin:  50px auto 20px auto;
 }
 
 a {
-    text-decoration: none; /* Link-Stil anpassen, z. B. Unterstreichung entfernen */
-    color: var(--blue); /* Link-Farbe festlegen */
-    margin: 5px 0; /* Abstände zwischen Links */
+    text-decoration: none; 
+    color: var(--blue);
+    margin: 5px 0; 
 }
 
 .description a:hover, details a:hover {
@@ -102,7 +95,7 @@ section {
     flex-direction: row;
     width: 100%;
     height: 50%;    
-    margin: 30px;   
+    margin: 50px auto;   
 }
 
 .svg {
@@ -156,6 +149,19 @@ summary {
         margin: 35px auto;
     }
     details {
-        margin: 75px auto;
+        margin: 90px auto;
+    }
+    .svg {
+        width: 40%;
+    }
+
+    button {
+        width: 60%; 
+        height: 50px;
+    }
+    section {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
